--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build the Docker image
       run: |
         docker build . --file Dockerfile --tag loredous/faqbot:$(date +%s)
-        docker push loredous/faqbot
+        docker push loredous/faqbot:$(date +%s)
